--- a/Company.PL/Views/Department/Details.cshtml
+++ b/Company.PL/Views/Department/Details.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "Details";
 }
 
+<h1>Department <span class="text-info">@Model.Name</span> Details</h1>
+
 <div>
     <div class="form-group">
         <label class="col-form-label" asp-for="Code"></label>
