--- a/Company.PL/Views/Department/Index.cshtml
+++ b/Company.PL/Views/Department/Index.cshtml
@@ -34,7 +34,7 @@
                         </a>
                     </td>
                     <td>
-                        <a asp-controller="Department" asp-action="Update" asp-route-id="@department.Id" class="btn btn-success">
+                        <a asp-controller="Department" asp-action="Edit" asp-route-id="@department.Id" class="btn btn-success">
                             <i class="fas fa-edit"></i> Update
                         </a>
                     </td>
