Add Employee Controller Views

--- a/Company.PL/Views/Department/Details.cshtml
+++ b/Company.PL/Views/Department/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Department
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Details Of Department";
 }
 
 <h1>Department <span class="text-info">@Model.Name</span> Details</h1>
