--- a/Company.PL/Views/Department/Edit.cshtml
+++ b/Company.PL/Views/Department/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Department
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Department";
 }
 
 <h1>Edit <span class="text-info">@Model.Name</span> Department</h1>
