--- a/Company.PL/Views/Department/Index.cshtml
+++ b/Company.PL/Views/Department/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @model IEnumerable<Department>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Departments";
 }
 
 <h1 class="mb-5">All Department</h1>
