--- a/Company.PL/Views/Department/Create.cshtml
+++ b/Company.PL/Views/Department/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Department
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Department";
 }
 
 <h1 class="mb-5">Create New Department</h1>
