--- a/Company.PL/Views/Department/Delete.cshtml
+++ b/Company.PL/Views/Department/Delete.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Department
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Department";
 }
 
 <h1 class="modal-title fs-5" id="staticBackdropLabel">Are you Sure to Delete <span class="text-danger">@Model.Name</span> Department?</h1>
