--- a/Company.PL/Views/Department/Create.cshtml
+++ b/Company.PL/Views/Department/Create.cshtml
@@ -24,3 +24,10 @@
     <input type="submit" value="Create" class="btn btn-primary"/> |
     <a asp-action="Index" class="btn btn-light">Back To List</a>
 </form>
+
+@section ValidationScriptsSections {
+    @* <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script> *@
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    @* <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script> *@
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+}
