--- a/Company.PL/Views/Department/Edit.cshtml
+++ b/Company.PL/Views/Department/Edit.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Edit Department";
 }
 
-<h1>Edit <span class="text-info">@Model.Name</span> Department</h1>
+<h1>Edit <span class="text-success">@Model.Name</span> Department</h1>
 
 <form asp-action="Edit">
     <div asp-validation-summary="ModelOnly" class="text-danger mb-2"></div>
@@ -25,3 +25,10 @@
     <input type="submit" value="Save" class="btn btn-primary" /> |
     <a asp-action="Index" class="btn btn-light">Cancel</a>
 </form>
+
+@section ValidationScriptsSections {
+    @* <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script> *@
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    @* <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script> *@
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+}
