--- a/Company.PL/Views/Employee/Create.cshtml
+++ b/Company.PL/Views/Employee/Create.cshtml
@@ -32,12 +32,12 @@
         <span asp-validation-for="Salary" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <input asp-for="IsActive" class="form-check-input"/>
         <label class="col-form-label" asp-for="IsActive"></label>
+        <input asp-for="IsActive" class="form-check"/>
     </div>
     <div class="form-group">
         <label class="col-form-label" asp-for="Gender"></label>
-        <input asp-for="Gender" class="form-control"/>
+        <input asp-for="Gender" class="form-control" />
         <span asp-validation-for="Gender" class="text-danger"></span>
     </div>
     <div class="form-group">
@@ -48,3 +48,10 @@
     <input type="submit" value="Create" class="btn btn-primary"/> |
     <a asp-action="Index" class="btn btn-light">Back To List</a>
 </form>
+
+@section ValidationScriptsSections {
+    @* <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script> *@
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    @* <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script> *@
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+}
