--- a/Company.PL/Views/Employee/Delete.cshtml
+++ b/Company.PL/Views/Employee/Delete.cshtml
@@ -27,8 +27,8 @@
         <input asp-for="Salary" class="form-control" readonly />
     </div>
     <div class="form-group">
-        <input asp-for="IsActive" class="form-check-input" readonly />
         <label class="col-form-label" asp-for="IsActive"></label>
+        <input asp-for="IsActive" class="form-check" readonly />
     </div>
     <div class="form-group">
         <label class="col-form-label" asp-for="Gender"></label>
