--- a/Company.PL/Views/Employee/Details.cshtml
+++ b/Company.PL/Views/Employee/Details.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Details Of Employee";
 }
 
-<h1>Employee <span class="text-info">@Model.Name</span> Details</h1>
+<h1>Employee <span class="text-warning">@Model.Name</span> Details</h1>
 
 <div>
     <div class="form-group">
@@ -27,8 +27,8 @@
         <input asp-for="Salary" class="form-control" readonly/>
     </div>
     <div class="form-group">
-        <input asp-for="IsActive" class="form-check-input" readonly/>
         <label class="col-form-label" asp-for="IsActive"></label>
+        <input asp-for="IsActive" class="form-check" readonly/>
     </div>
     <div class="form-group">
         <label class="col-form-label" asp-for="Gender"></label>
