--- a/Company.PL/Views/Employee/Edit.cshtml
+++ b/Company.PL/Views/Employee/Edit.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Edit Employee";
 }
 
-<h1>Edit <span class="text-info">@Model.Name</span> Employee</h1>
+<h1>Edit <span class="text-success">@Model.Name</span> Employee</h1>
 
 <form asp-action="Edit">
     <div asp-validation-summary="ModelOnly" class="text-danger mb-2"></div>
@@ -34,8 +34,8 @@
         <span asp-validation-for="Salary" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <input asp-for="IsActive" class="form-check-input" />
         <label class="col-form-label" asp-for="IsActive"></label>
+        <input asp-for="IsActive" class="form-check" />
     </div>
     <div class="form-group">
         <label class="col-form-label" asp-for="Gender"></label>
@@ -50,3 +50,10 @@
     <input type="submit" value="Save" class="btn btn-primary" /> |
     <a asp-action="Index" class="btn btn-light">Cancel</a>
 </form>
+
+@section ValidationScriptsSections {
+    @* <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script> *@
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    @* <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script> *@
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+}
