--- a/Company.PL/Views/Employee/Index.cshtml
+++ b/Company.PL/Views/Employee/Index.cshtml
@@ -22,6 +22,7 @@
                 @* <th>@Html.DisplayNameFor(D => D.EmployeeType)</th> *@
                 @* <th>@Html.DisplayNameFor(D => D.HiringDate)</th> *@
                 <th>@Html.DisplayNameFor(D => D.Email)</th>
+                @* <th>@Html.DisplayNameFor(D => D.PhoneNumber)</th> *@
                 <th>Details</th>
                 <th>Update</th>
                 <th>Delete</th>
