--- a/Company.PL/Views/Department/Create.cshtml
+++ b/Company.PL/Views/Department/Create.cshtml
@@ -3,26 +3,35 @@
     ViewData["Title"] = "Create Department";
 }
 
-<h1 class="mb-5">Create New Department</h1>
+<!-- Modal -->
+@* <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form asp-action="Create">
+                    <partial name="PartialViews/CreatEditDepartmentPartial" />
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <input type="submit" value="Create" class="btn btn-primary" />
+                    </div>
+                </form>
+            </div>
+            
+        </div>
+    </div>
+</div> *@
 
 <form asp-action="Create">
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Code"></label>
-        <input asp-for="Code" class="form-control"/>
-        <span asp-validation-for="Code" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Name"></label>
-        <input asp-for="Name" class="form-control"/>
-        <span asp-validation-for="Name" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="DateOfCreation"></label>
-        <input asp-for="DateOfCreation" class="form-control"/>
-    </div>
+    <partial name="PartialViews/CreatEditDepartmentPartial" />
 
-    <input type="submit" value="Create" class="btn btn-primary"/> |
+    <input type="submit" value="Create" class="btn btn-primary" /> |
     <a asp-action="Index" class="btn btn-light">Back To List</a>
+    
 </form>
 
 @section ValidationScriptsSections {
