--- a/Company.PL/Views/Department/Delete.cshtml
+++ b/Company.PL/Views/Department/Delete.cshtml
@@ -3,22 +3,11 @@
     ViewData["Title"] = "Delete Department";
 }
 
-<h1 class="modal-title fs-5" id="staticBackdropLabel">Are you Sure to Delete <span class="text-danger">@Model.Name</span> Department?</h1>
+<h1 class="mb-5" >Are you Sure to Delete <span class="text-danger">@Model.Name</span> Department?</h1>
 
 <form asp-action="Delete">
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Code"></label>
-        <input asp-for="Code" class="form-control" readonly />
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Name"></label>
-        <input asp-for="Name" class="form-control" readonly />
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="DateOfCreation"></label>
-        <input asp-for="DateOfCreation" class="form-control" readonly />
-    </div>
+    <partial name="PartialViews/DetailsDeleteDepartmentPartial" />
 
-    <input type="submit" value="Delete" data-bs-dismiss="modal" class="btn btn-danger" /> |
+    <input type="submit" value="Delete" class="btn btn-danger" /> |
     <a asp-action="Index" class="btn btn-light">Cancel</a>
 </form>
