--- a/Company.PL/Views/Department/Index.cshtml
+++ b/Company.PL/Views/Department/Index.cshtml
@@ -7,7 +7,11 @@
 <h1 class="mb-5">All Department</h1>
 
 <a asp-controller="Department" asp-action="Create" class="btn btn-primary mb-3">Create New Department</a>
-
+<!-- Button trigger modal -->
+@* <button type="button" class="btn btn-primary mb-3" data-toggle="modal" data-target="#staticBackdrop">
+    Create New Department
+</button>
+ *@
 @if(Model.Count() > 0)
 {
     <table class="table table-striped table-hover mt-3">
@@ -28,21 +32,7 @@
                     <td>@department.Code</td>
                     <td>@department.Name</td>
                     <td>@department.DateOfCreation</td>
-                    <td>
-                        <a asp-controller="Department" asp-action="Details" asp-route-id="@department.Id" class="btn btn-warning">
-                            <i class="fas fa-eye"></i> Details
-                        </a>
-                    </td>
-                    <td>
-                        <a asp-controller="Department" asp-action="Edit" asp-route-id="@department.Id" class="btn btn-success">
-                            <i class="fas fa-edit"></i> Update
-                        </a>
-                    </td>
-                    <td>
-                        <a asp-controller="Department" asp-action="Delete" asp-route-id="@department.Id" class="btn btn-danger">
-                            <i class="fas fa-trash"></i> Delete
-                        </a>
-                    </td>
+                    <partial name="_ButtonsPartial" model="@department.Id"/>
                 </tr>
             }
         </tbody>
@@ -54,3 +44,5 @@ else
         <h3>There is No Departments !!</h3>
     </div>
 }
+
+@* @await Html.PartialAsync("Create", new Department()) *@
