--- a/Company.PL/Views/Employee/Create.cshtml
+++ b/Company.PL/Views/Employee/Create.cshtml
@@ -3,50 +3,12 @@
     ViewData["Title"] = "Create Employee";
 }
 
-<h1 class="mb-5">Create New Employee</h1>
-
 <form asp-action="Create">
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Name"></label>
-        <input asp-for="Name" class="form-control"/>
-        <span asp-validation-for="Name" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Email"></label>
-        <input asp-for="Email" class="form-control"/>
-        <span asp-validation-for="Email" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Adress"></label>
-        <input asp-for="Adress" class="form-control"/>
-        <span asp-validation-for="Adress" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Age"></label>
-        <input asp-for="Age" class="form-control"/>
-        <span asp-validation-for="Age" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Salary"></label>
-        <input asp-for="Salary" class="form-control"/>
-        <span asp-validation-for="Salary" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="IsActive"></label>
-        <input asp-for="IsActive" class="form-check"/>
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Gender"></label>
-        <input asp-for="Gender" class="form-control" />
-        <span asp-validation-for="Gender" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="HiringDate"></label>
-        <input asp-for="HiringDate" class="form-control"/>
-    </div>
+    <partial name="PartialViews/CreatEditEmployeePartial" />
 
-    <input type="submit" value="Create" class="btn btn-primary"/> |
+    <input type="submit" value="Create" class="btn btn-primary" /> |
     <a asp-action="Index" class="btn btn-light">Back To List</a>
+    
 </form>
 
 @section ValidationScriptsSections {
