--- a/Company.PL/Views/Employee/Delete.cshtml
+++ b/Company.PL/Views/Employee/Delete.cshtml
@@ -3,42 +3,11 @@
     ViewData["Title"] = "Delete Employee";
 }
 
-<h1 class="modal-title fs-5" id="staticBackdropLabel">Are you Sure to Delete <span class="text-danger">@Model.Name</span> Employee?</h1>
+<h1 class="mb-5">Are you Sure to Delete <span class="text-danger">@Model.Name</span> Employee?</h1>
 
 <form asp-action="Delete">
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Name"></label>
-        <input asp-for="Name" class="form-control" readonly />
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Email"></label>
-        <input asp-for="Email" class="form-control" readonly />
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Adress"></label>
-        <input asp-for="Adress" class="form-control" readonly />
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Age"></label>
-        <input asp-for="Age" class="form-control" readonly />
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Salary"></label>
-        <input asp-for="Salary" class="form-control" readonly />
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="IsActive"></label>
-        <input asp-for="IsActive" class="form-check" readonly />
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Gender"></label>
-        <input asp-for="Gender" class="form-control" readonly />
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="HiringDate"></label>
-        <input asp-for="HiringDate" class="form-control" readonly />
-    </div>
+    <partial name="PartialViews/DetailsDeleteEmployeePartial" />
 
-    <input type="submit" value="Delete" data-bs-dismiss="modal" class="btn btn-danger" /> |
+    <input type="submit" value="Delete" class="btn btn-danger" /> |
     <a asp-action="Index" class="btn btn-light">Cancel</a>
 </form>
