--- a/Company.PL/Views/Employee/Index.cshtml
+++ b/Company.PL/Views/Employee/Index.cshtml
@@ -20,9 +20,9 @@
                 @* <th>@Html.DisplayNameFor(D => D.PhoneNumber)</th> *@
                 <th>@Html.DisplayNameFor(D => D.Gender)</th>
                 @* <th>@Html.DisplayNameFor(D => D.EmployeeType)</th> *@
-                @* <th>@Html.DisplayNameFor(D => D.HiringDate)</th> *@
                 <th>@Html.DisplayNameFor(D => D.Email)</th>
-                @* <th>@Html.DisplayNameFor(D => D.PhoneNumber)</th> *@
+                <th>@Html.DisplayNameFor(D => D.PhoneNumber)</th>
+                <th>@Html.DisplayNameFor(D => D.HiringDate)</th>
                 <th>Details</th>
                 <th>Update</th>
                 <th>Delete</th>
@@ -38,21 +38,9 @@
                     <td>@Html.DisplayFor(M => employee.IsActive)</td>
                     <td>@Html.DisplayFor(M => employee.Gender)</td>
                     <td>@Html.DisplayFor(M => employee.Email)</td>
-                    <td>
-                        <a asp-controller="Employee" asp-action="Details" asp-route-id="@employee.Id" class="btn btn-warning">
-                            <i class="fas fa-eye"></i> Details
-                        </a>
-                    </td>
-                    <td>
-                        <a asp-controller="Employee" asp-action="Edit" asp-route-id="@employee.Id" class="btn btn-success">
-                            <i class="fas fa-edit"></i> Update
-                        </a>
-                    </td>
-                    <td>
-                        <a asp-controller="Employee" asp-action="Delete" asp-route-id="@employee.Id" class="btn btn-danger">
-                            <i class="fas fa-trash"></i> Delete
-                        </a>
-                    </td>
+                    <td>@Html.DisplayFor(M => employee.PhoneNumber)</td>
+                    <td>@Html.DisplayFor(M => employee.HiringDate)</td>
+                    <partial name="_ButtonsPartial" model="@employee.Id"/>
                 </tr>
             }
         </tbody>
