--- a/Company.PL/Views/Employee/Index.cshtml
+++ b/Company.PL/Views/Employee/Index.cshtml
@@ -2,12 +2,19 @@
 @model IEnumerable<Employee>
 @{
     ViewData["Title"] = "Employees";
+    string VDataMessage = ViewBag.Message;
 }
 
 <h1 class="mb-5">All Employee</h1>
 
 <a asp-controller="Employee" asp-action="Create" class="btn btn-primary mb-3">Create New Employee</a>
 
+@if (TempData["Message"] is not null)
+{
+    <div class="alert @VDataMessage">
+        @TempData["Message"]
+    </div>
+}
 @if(Model.Count() > 0)
 {
     <table class="table table-striped table-hover mt-3">
