--- a/Company.PL/Views/Employee/Index.cshtml
+++ b/Company.PL/Views/Employee/Index.cshtml
@@ -23,6 +23,7 @@
                 <th>@Html.DisplayNameFor(D => D.Name)</th>
                 <th>@Html.DisplayNameFor(D => D.Age)</th>
                 <th>@Html.DisplayNameFor(D => D.Salary)</th>
+                <th>@Html.DisplayNameFor(D => D.Department)</th>
                 <th>@Html.DisplayNameFor(D => D.IsActive)</th>
                 @* <th>@Html.DisplayNameFor(D => D.PhoneNumber)</th> *@
                 <th>@Html.DisplayNameFor(D => D.Gender)</th>
@@ -42,6 +43,7 @@
                     <td>@Html.DisplayFor(M => employee.Name)</td>
                     <td>@Html.DisplayFor(M => employee.Age)</td>
                     <td>@Html.DisplayFor(M => employee.Salary)</td>
+                    <td>@Html.DisplayFor(M => employee.Department.Name)</td>
                     <td>@Html.DisplayFor(M => employee.IsActive)</td>
                     <td>@Html.DisplayFor(M => employee.Gender)</td>
                     <td>@Html.DisplayFor(M => employee.Email)</td>
