--- a/Company.PL/Views/Employee/PartialViews/CreatEditEmployeePartial.cshtml
+++ b/Company.PL/Views/Employee/PartialViews/CreatEditEmployeePartial.cshtml
@@ -1,4 +1,7 @@
 ﻿@model Employee
+@{
+    var departments = new SelectList(ViewBag.Departments, "Id", "Name");
+}
 
 <div class="form-group">
     <label class="col-form-label" asp-for="Name"></label>
@@ -14,6 +17,12 @@
     <label class="col-form-label" asp-for="PhoneNumber"></label>
     <input asp-for="PhoneNumber" class="form-control" />
     <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+</div>
+<div class="form-group">
+    <label class="col-form-label" asp-for="Department"></label>
+    <select class="form-control" asp-items="@departments" asp-for="DepartmentId">
+        <option value="@null">--- Select Department ---</option>
+    </select>
 </div>
 <div class="form-group">
     <label class="col-form-label" asp-for="Adress"></label>
