AddSingleton vs AddScoped vs AddTransient

--- a/Company.PL/Views/Department/Create.cshtml
+++ b/Company.PL/Views/Department/Create.cshtml
@@ -25,6 +25,7 @@
         </div>
     </div>
 </div> *@
+<hi>Create new Department</hi>
 
 <form asp-action="Create">
     <partial name="PartialViews/CreatEditDepartmentPartial" />
