--- a/Company.PL/Views/Employee/Create.cshtml
+++ b/Company.PL/Views/Employee/Create.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "Create Employee";
 }
 
+<hi>Create new Employee</hi>
+
 <form asp-action="Create">
     <partial name="PartialViews/CreatEditEmployeePartial" />
 
