--- a/Company.PL/Views/Department/Index.cshtml
+++ b/Company.PL/Views/Department/Index.cshtml
@@ -2,7 +2,7 @@
 @model IEnumerable<Department>
 @{
     ViewData["Title"] = "Departments";
-    string VDataMessage = ViewBag.Message;
+    string alertColor = ViewBag.Message;
     // string VBagMessage = ViewBag.Message;
 }
 
@@ -17,7 +17,7 @@
 
  @if(TempData["Message"] is not null)
 {
-    <div class="alert @VDataMessage">
+    <div class="alert @alertColor">
         @TempData["Message"]
     </div>
 }
@@ -42,6 +42,7 @@
                     <td>@department.Name</td>
                     <td>@department.DateOfCreation</td>
                     <partial name="_ButtonsPartial" model="@department.Id"/>
+                    @* @await Html.PartialAsync("Delete", department) *@
                 </tr>
             }
         </tbody>
