--- a/Company.PL/Views/Employee/Index.cshtml
+++ b/Company.PL/Views/Employee/Index.cshtml
@@ -26,7 +26,7 @@
                 <th>@Html.DisplayNameFor(D => D.Department)</th>
                 <th>@Html.DisplayNameFor(D => D.IsActive)</th>
                 @* <th>@Html.DisplayNameFor(D => D.PhoneNumber)</th> *@
-                <th>@Html.DisplayNameFor(D => D.Gender)</th>
+                @* <th>@Html.DisplayNameFor(D => D.Gender)</th> *@
                 @* <th>@Html.DisplayNameFor(D => D.EmployeeType)</th> *@
                 <th>@Html.DisplayNameFor(D => D.Email)</th>
                 <th>@Html.DisplayNameFor(D => D.PhoneNumber)</th>
@@ -44,8 +44,17 @@
                     <td>@Html.DisplayFor(M => employee.Age)</td>
                     <td>@Html.DisplayFor(M => employee.Salary)</td>
                     <td>@Html.DisplayFor(M => employee.Department.Name)</td>
-                    <td>@Html.DisplayFor(M => employee.IsActive)</td>
-                    <td>@Html.DisplayFor(M => employee.Gender)</td>
+                    <td>
+                        @if (employee.IsActive)
+                        {
+                            <i class="fa-solid fa-circle" style="color: green"></i>
+                        }
+                        else
+                        {
+                            <i class="fa-solid fa-circle" style="color: red"></i>
+                        }
+                    </td>
+                    @* <td>@Html.DisplayFor(M => employee.Gender)</td> *@
                     <td>@Html.DisplayFor(M => employee.Email)</td>
                     <td>@Html.DisplayFor(M => employee.PhoneNumber)</td>
                     <td>@Html.DisplayFor(M => employee.HiringDate)</td>
