--- a/Company.PL/Views/Employee/PartialViews/CreatEditEmployeePartial.cshtml
+++ b/Company.PL/Views/Employee/PartialViews/CreatEditEmployeePartial.cshtml
@@ -1,6 +1,10 @@
-﻿@model Employee
+﻿
+@model Employee
+
+@inject IDepartmentRepository _departmentRepository
+
 @{
-    var departments = new SelectList(ViewBag.Departments, "Id", "Name");
+    var departments = new SelectList(_departmentRepository.GetAll(), nameof(Department.Id), nameof(Department.Name));
 }
 
 <div class="form-group">
@@ -43,11 +47,11 @@
     <label class="col-form-label" asp-for="IsActive"></label>
     <input asp-for="IsActive" class="form-check" />
 </div>
-<div class="form-group">
+@* <div class="form-group">
     <label class="col-form-label" asp-for="Gender"></label>
     <input asp-for="Gender" class="form-control" />
     <span asp-validation-for="Gender" class="text-danger"></span>
-</div>
+</div> *@
 <div class="form-group">
     <label class="col-form-label" asp-for="HiringDate"></label>
     <input asp-for="HiringDate" class="form-control" />
