--- a/Company.PL/Views/Employee/PartialViews/DetailsDeleteEmployeePartial.cshtml
+++ b/Company.PL/Views/Employee/PartialViews/DetailsDeleteEmployeePartial.cshtml
@@ -1,5 +1,11 @@
 ﻿@model Employee
 
+@inject IDepartmentRepository _departmentRepository
+
+@{
+    var departments = new SelectList(_departmentRepository.GetAll(), nameof(Department.Id), nameof(Department.Name));
+}
+
 <div class="form-group">
     <label class="col-form-label" asp-for="Name"></label>
     <input asp-for="Name" class="form-control" readonly />
@@ -11,6 +17,12 @@
 <div class="form-group">
     <label class="col-form-label" asp-for="PhoneNumber"></label>
     <input asp-for="PhoneNumber" class="form-control" readonly />
+</div>
+<div class="form-grup">
+    <label class="col-form-label" asp-for="Department"></label>
+    <select readonly class="form-control" asp-items="@departments" asp-for="DepartmentId">
+        <option readonly value="@null" class="text-center">No Department</option>
+    </select>
 </div>
 <div class="form-group">
     <label class="col-form-label" asp-for="Adress"></label>
@@ -28,10 +40,10 @@
     <label class="col-form-label" asp-for="IsActive"></label>
     <input asp-for="IsActive" class="form-check" readonly />
 </div>
-<div class="form-group">
+@* <div class="form-group">
     <label class="col-form-label" asp-for="Gender"></label>
     <input asp-for="Gender" class="form-control" readonly />
-</div>
+</div> *@
 <div class="form-group">
     <label class="col-form-label" asp-for="HiringDate"></label>
     <input asp-for="HiringDate" class="form-control" readonly />
