--- a/Company.PL/Views/_ViewImports.cshtml
+++ b/Company.PL/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Company.PL
 @using Company.PL.ViewModels
 @using Company.DAL.Models
+@using Company.BLL.Interfaces
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
