Mapping Employee and EmployeeViewModel with AutoMapper

--- a/Company.PL/Views/Department/Create.cshtml
+++ b/Company.PL/Views/Department/Create.cshtml
@@ -25,7 +25,7 @@
         </div>
     </div>
 </div> *@
-<hi>Create new Department</hi>
+<h1 class="mb-5">Create new Department</h1>
 
 <form asp-action="Create">
     <partial name="PartialViews/CreatEditDepartmentPartial" />
