--- a/Company.PL/Views/Employee/Create.cshtml
+++ b/Company.PL/Views/Employee/Create.cshtml
@@ -1,9 +1,9 @@
-﻿@model Employee
+﻿@model EmployeeViewModel
 @{
     ViewData["Title"] = "Create Employee";
 }
 
-<hi>Create new Employee</hi>
+<h1 class="mb-5">Create new Employee</h1>
 
 <form asp-action="Create">
     <partial name="PartialViews/CreatEditEmployeePartial" />
