--- a/Company.PL/Views/Employee/Index.cshtml
+++ b/Company.PL/Views/Employee/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model IEnumerable<Employee>
+﻿@model IEnumerable<EmployeeViewModel>
 @{
     ViewData["Title"] = "Employees";
     string VDataMessage = ViewBag.Message;
