Add Search Feature to Employee

--- a/Company.PL/Views/Employee/Details.cshtml
+++ b/Company.PL/Views/Employee/Details.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Details Of Employee";
 }
 
-<h1>Employee <span class="text-warning">@Model.Name</span> Details</h1>
+<h1 class="mb-5">Employee <span class="text-warning">@Model.Name</span> Details</h1>
 
 <div>
     <partial name="PartialViews/DetailsDeleteEmployeePartial" />
