--- a/Company.PL/Views/Department/Details.cshtml
+++ b/Company.PL/Views/Department/Details.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Details Of Department";
 }
 
-<h1>Department <span class="text-warning">@Model.Name</span> Details</h1>
+<h1 class="mb-5">Department <span class="text-warning">@Model.Name</span> Details</h1>
 
 <div>
     <partial name="PartialViews/DetailsDeleteDepartmentPartial" />
