--- a/Company.PL/Views/Department/Edit.cshtml
+++ b/Company.PL/Views/Department/Edit.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Edit Department";
 }
 
-<h1>Edit <span class="text-success">@Model.Name</span> Department</h1>
+<h1 class="mb-5">Edit <span class="text-success">@Model.Name</span> Department</h1>
 
 <form asp-action="Edit">
     <div asp-validation-summary="ModelOnly" class="text-danger mb-2"></div>
