--- a/Company.PL/Views/Department/Index.cshtml
+++ b/Company.PL/Views/Department/Index.cshtml
@@ -2,7 +2,7 @@
 @model IEnumerable<Department>
 @{
     ViewData["Title"] = "Departments";
-    string alertColor = ViewBag.Message;
+    string alertColor = ViewBag.AlertColor;
     // string VBagMessage = ViewBag.Message;
 }
 
