--- a/Company.PL/Views/Employee/Index.cshtml
+++ b/Company.PL/Views/Employee/Index.cshtml
@@ -1,22 +1,33 @@
 ﻿@model IEnumerable<EmployeeViewModel>
 @{
     ViewData["Title"] = "Employees";
-    string VDataMessage = ViewBag.Message;
+    string alertColor = ViewBag.AlertColor;
 }
 
 <h1 class="mb-5">All Employee</h1>
 
-<a asp-controller="Employee" asp-action="Create" class="btn btn-primary mb-3">Create New Employee</a>
+<a asp-controller="Employee" asp-action="Create" class="btn btn-primary mb-4">Create New Employee</a>
+
+<div class="row justify-content-center align-items-center">
+    <form asp-action="Index" class="row col-8 offset-1">
+        <div class="col-8">
+            <input type="text" class="form-control" name="searchInput" id="searchInput" placeholder="Search by Name" />
+        </div>
+        <div class="col-4">
+            <input type="submit" value="Search" class="btn btn-success"/>
+        </div>
+    </form>
+</div>
 
 @if (TempData["Message"] is not null)
 {
-    <div class="alert @VDataMessage">
+    <div class="alert @alertColor">
         @TempData["Message"]
     </div>
 }
 @if(Model.Count() > 0)
 {
-    <table class="table table-striped table-hover mt-3">
+    <table class="table table-striped table-hover mt-4">
         <thead>
             <tr>
                 <th>@Html.DisplayNameFor(D => D.Name)</th>
