--- a/Company.PL/Views/Employee/PartialViews/CreatEditEmployeePartial.cshtml
+++ b/Company.PL/Views/Employee/PartialViews/CreatEditEmployeePartial.cshtml
@@ -1,9 +1,9 @@
 ﻿@model EmployeeViewModel
 
-@inject IDepartmentRepository _departmentRepository
+@inject IUnitOfWork _unitOfWork
 
 @{
-    var departments = new SelectList(_departmentRepository.GetAll(), nameof(Department.Id), nameof(Department.Name));
+    var departments = new SelectList(_unitOfWork.DepartmentRepository.GetAll(), nameof(Department.Id), nameof(Department.Name));
 }
 
 <div class="form-group">
