Refactor Create Employee Action - Upload Image

--- a/Company.PL/Views/Employee/Create.cshtml
+++ b/Company.PL/Views/Employee/Create.cshtml
@@ -5,7 +5,7 @@
 
 <h1 class="mb-5">Create new Employee</h1>
 
-<form asp-action="Create">
+<form asp-action="Create" enctype="multipart/form-data">
     <partial name="PartialViews/CreatEditEmployeePartial" />
 
     <input type="submit" value="Create" class="btn btn-primary" /> |
