--- a/Company.PL/Views/Department/Index.cshtml
+++ b/Company.PL/Views/Department/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model IEnumerable<Department>
+﻿@model IEnumerable<Department>
 @{
     ViewData["Title"] = "Departments";
     string alertColor = ViewBag.AlertColor;
