--- a/Company.PL/Views/Employee/Index.cshtml
+++ b/Company.PL/Views/Employee/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<EmployeeViewModel>
+﻿
+@model IEnumerable<EmployeeViewModel>
 @{
     ViewData["Title"] = "Employees";
     string alertColor = ViewBag.AlertColor;
@@ -21,7 +22,7 @@
 
 @if (TempData["Message"] is not null)
 {
-    <div class="alert @alertColor">
+    <div class="alert @alertColor mt-3">
         @TempData["Message"]
     </div>
 }
@@ -35,9 +36,8 @@
                 <th>@Html.DisplayNameFor(D => D.Salary)</th>
                 <th>@Html.DisplayNameFor(D => D.Department)</th>
                 <th>@Html.DisplayNameFor(D => D.IsActive)</th>
-                @* <th>@Html.DisplayNameFor(D => D.PhoneNumber)</th> *@
-                @* <th>@Html.DisplayNameFor(D => D.Gender)</th> *@
-                @* <th>@Html.DisplayNameFor(D => D.EmployeeType)</th> *@
+                <th>@Html.DisplayNameFor(D => D.Gender)</th> 
+                <th>@Html.DisplayNameFor(D => D.EmployeeType)</th>
                 <th>@Html.DisplayNameFor(D => D.Email)</th>
                 <th>@Html.DisplayNameFor(D => D.PhoneNumber)</th>
                 <th>@Html.DisplayNameFor(D => D.HiringDate)</th>
@@ -64,7 +64,8 @@
                             <i class="fa-solid fa-circle" style="color: red"></i>
                         }
                     </td>
-                    @* <td>@Html.DisplayFor(M => employee.Gender)</td> *@
+                    <td>@Html.DisplayFor(M => employee.Gender)</td>
+                    <td>@Html.DisplayFor(M => employee.EmployeeType)</td>
                     <td>@Html.DisplayFor(M => employee.Email)</td>
                     <td>@Html.DisplayFor(M => employee.PhoneNumber)</td>
                     <td>@Html.DisplayFor(M => employee.HiringDate)</td>
