--- a/Company.PL/Views/Employee/PartialViews/CreatEditEmployeePartial.cshtml
+++ b/Company.PL/Views/Employee/PartialViews/CreatEditEmployeePartial.cshtml
@@ -43,15 +43,30 @@
     <span asp-validation-for="Salary" class="text-danger"></span>
 </div>
 <div class="form-group">
+    <label class="control-label" asp-for="Gender"></label>
+    @foreach(Gender gender in Enum.GetValues(typeof(Gender)))
+    {
+        <label class="radio-inline">
+            <input type="radio" asp-for="Gender" value="@gender"/>
+            @gender
+        </label>
+    }
+</div>
+<div class="form-group">
+    <label class="control-label" asp-for="EmployeeType"></label>
+    <select asp-for="EmployeeType" asp-items="Html.GetEnumSelectList<EmpType>()" class="form-control">
+        <option value="">- Select Employee Type -</option>
+    </select>
+</div>
+<div class="form-group">
     <label class="col-form-label" asp-for="IsActive"></label>
     <input asp-for="IsActive" class="form-check" />
 </div>
-@* <div class="form-group">
-    <label class="col-form-label" asp-for="Gender"></label>
-    <input asp-for="Gender" class="form-control" />
-    <span asp-validation-for="Gender" class="text-danger"></span>
-</div> *@
 <div class="form-group">
     <label class="col-form-label" asp-for="HiringDate"></label>
     <input asp-for="HiringDate" class="form-control" />
+</div>
+<div class="form-group">
+    <label class="col-form-label" asp-for="Image"></label>
+    <input asp-for="Image" class="form-control-file" />
 </div>
