--- a/Company.PL/Views/Employee/PartialViews/DetailsDeleteEmployeePartial.cshtml
+++ b/Company.PL/Views/Employee/PartialViews/DetailsDeleteEmployeePartial.cshtml
@@ -37,13 +37,25 @@
     <input asp-for="Salary" class="form-control" readonly />
 </div>
 <div class="form-group">
-    <label class="col-form-label" asp-for="IsActive"></label>
-    <input asp-for="IsActive" class="form-check" readonly />
+    <label class="control-label" asp-for="Gender"></label>
+    @foreach (Gender gender in Enum.GetValues(typeof(Gender)))
+    {
+        <label class="radio-inline">
+            <input type="radio" asp-for="Gender" value="@gender" readonly/>
+            @gender
+        </label>
+    }
 </div>
-@* <div class="form-group">
-    <label class="col-form-label" asp-for="Gender"></label>
-    <input asp-for="Gender" class="form-control" readonly />
-</div> *@
+<div class="form-group">
+    <label class="control-label" asp-for="EmployeeType"></label>
+    <select asp-for="EmployeeType" asp-items="Html.GetEnumSelectList<EmpType>()" class="form-control">
+        <option value="">- Select Employee Type -</option>
+    </select>
+</div>
+<div class="form-group">
+    <label class="col-form-label" asp-for="IsActive"></label>
+    <input asp-for="IsActive" class="form-check" readonly/>
+</div>
 <div class="form-group">
     <label class="col-form-label" asp-for="HiringDate"></label>
     <input asp-for="HiringDate" class="form-control" readonly />
