--- a/Company.PL/Views/_ViewImports.cshtml
+++ b/Company.PL/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Company.PL
-@using Company.PL.ViewModels
 @using Company.DAL.Models
+@using Company.PL.ViewModels
+@using Company.PL.ViewModels.Employee
 @using Company.BLL.Interfaces
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
