--- a/Company.PL/Views/Employee/PartialViews/DetailsDeleteEmployeePartial.cshtml
+++ b/Company.PL/Views/Employee/PartialViews/DetailsDeleteEmployeePartial.cshtml
@@ -3,7 +3,7 @@
 @inject IUnitOfWork _unitOfWork
 
 @{
-    var departments = new SelectList(_unitOfWork.Repository<Department>().GetAll(), nameof(Department.Id), nameof(Department.Name));
+    var departments = new SelectList(await _unitOfWork.Repository<Department>().GetAllAsync(), nameof(Department.Id), nameof(Department.Name));
 }
 
 @if(Model.ImageName is not null)
