--- a/Company.PL/Views/_ViewImports.cshtml
+++ b/Company.PL/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using Company.PL.ViewModels
 @using Company.PL.ViewModels.Employee
 @using Company.BLL.Interfaces
+@using Company.PL.ViewModels.User
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
