--- a/Company.PL/Views/_ViewImports.cshtml
+++ b/Company.PL/Views/_ViewImports.cshtml
@@ -3,5 +3,5 @@
 @using Company.PL.ViewModels
 @using Company.PL.ViewModels.Employee
 @using Company.BLL.Interfaces
-@using Company.PL.ViewModels.User
+@using Company.PL.ViewModels.Account
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
