--- a/Company.PL/Views/Account/ForgetPassword.cshtml
+++ b/Company.PL/Views/Account/ForgetPassword.cshtml
@@ -4,15 +4,16 @@
     Layout = "~/Views/Shared/_AuthLayout.cshtml";
 }
 
-div class="main-agileinfo">
-<div class="agileits-top">
-	<div asp-validation-summary="ModelOnly"></div>
-	<form asp-action="ResetPassword">
-		<input class="text email" asp-for="Email" placeholder="Email" required="">
-		<span asp-validation-for="Email" class="text-danger"></span>
+<div class="main-agileinfo">
+	<div class="agileits-top">
+		<div asp-validation-summary="ModelOnly"></div>
+		<form asp-action="ResetPasswordEmail">
+			<input class="text" asp-for="Email" placeholder="Email" required="">
+			<span asp-validation-for="Email" class="text-danger"></span>
 		
-		<input type="submit" value="Send">
-	</form>
+			<input type="submit" value="Send">
+		</form>
+	</div>
 </div>
 
 @section ValidationScriptsSections {
