--- a/Company.PL/Views/Shared/_AuthLayout.cshtml
+++ b/Company.PL/Views/Shared/_AuthLayout.cshtml
@@ -25,7 +25,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		@RenderBody()
 		<!-- copyright -->
 		<div class="colorlibcopy-agile">
-			<p>© 2018 Colorlib Signup Form. All rights reserved | Design by <a href="https://colorlib.com/" target="_blank">Colorlib</a></p>
+			<p>© @DateTime.Now.Year @ViewData["Title"] Form</p>
 		</div>
 		<!-- //copyright -->
 		<ul class="colorlib-bubbles">
