--- a/Company.PL/Views/Account/ForgetPassword.cshtml
+++ b/Company.PL/Views/Account/ForgetPassword.cshtml
@@ -6,10 +6,10 @@
 
 <div class="main-agileinfo">
 	<div class="agileits-top">
-		<div asp-validation-summary="ModelOnly"></div>
+		<div asp-validation-summary="ModelOnly" class="txt-red"></div>
 		<form asp-action="ResetPasswordEmail">
 			<input class="text" asp-for="Email" placeholder="Email" required="">
-			<span asp-validation-for="Email" class="text-danger"></span>
+			<span asp-validation-for="Email" class="txt-red"></span>
 		
 			<input type="submit" value="Send">
 		</form>
