--- a/Company.PL/Views/Employee/Index.cshtml
+++ b/Company.PL/Views/Employee/Index.cshtml
@@ -5,7 +5,7 @@
     string alertColor = ViewBag.AlertColor;
 }
 
-<h1 class="mb-5">All Employee</h1>
+<h1 class="mb-5">All Employees</h1>
 
 <a asp-controller="Employee" asp-action="Create" class="btn btn-primary mb-4">Create New Employee</a>
 
@@ -73,7 +73,7 @@
                     <td>@Html.DisplayFor(M => employee.Email)</td>
                     <td>@Html.DisplayFor(M => employee.PhoneNumber)</td>
                     <td>@Html.DisplayFor(M => employee.HiringDate)</td>
-                    <partial name="_ButtonsPartial" model="@employee.Id"/>
+                    <partial name="_ButtonsPartial" model="@employee.Id.ToString()"/>
                 </tr>
             }
         </tbody>
@@ -82,6 +82,6 @@
 else
 {
     <div class="mt-3 alert alert-warning">
-        <h3>There is No Employees !!</h3>
+        <h3>There is No Employee !!</h3>
     </div>
 }
