--- a/Company.PL/Views/_ViewImports.cshtml
+++ b/Company.PL/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using Company.PL.ViewModels.Employee
 @using Company.BLL.Interfaces
 @using Company.PL.ViewModels.Account
+@using Company.PL.ViewModels.User
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
