User Controller - Delete

--- a/Company.PL/Views/Department/Delete.cshtml
+++ b/Company.PL/Views/Department/Delete.cshtml
@@ -26,7 +26,7 @@
     </div>
 </div> *@
 
-<h1 class="mb-5" >Are you Sure to Delete <span class="text-danger">@Model.Name</span> Department?</h1>
+<h1 class="mb-5" >Delete <span class="text-danger">@Model.Name</span> Department?</h1>
 
 <form asp-action="Delete">
     <partial name="PartialViews/DetailsDeleteDepartmentPartial" />
