--- a/Company.PL/Views/Employee/Delete.cshtml
+++ b/Company.PL/Views/Employee/Delete.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Delete Employee";
 }
 
-<h1 class="mb-5">Are you Sure to Delete <span class="text-danger">@Model.Name</span> Employee?</h1>
+<h1 class="mb-5">Delete <span class="text-danger">@Model.Name</span> Employee?</h1>
 
 <form asp-action="Delete">
     <partial name="PartialViews/DetailsDeleteEmployeePartial" />
