--- a/Company.PL/Views/User/Edit.cshtml
+++ b/Company.PL/Views/User/Edit.cshtml
@@ -5,7 +5,7 @@
 
 <h1 class="mb-5">Edit <span class="text-success">@Model.Username</span> Employee</h1>
 
-<form asp-action="Edit" enctype="multipart/form-data">
+<form asp-action="Edit">
     <div asp-validation-summary="ModelOnly" class="text-danger mb-2"></div>
 
     <partial name="PartialViews/EditUserPartial" />
