Role Controller - Index

--- a/Company.PL/Views/Department/Index.cshtml
+++ b/Company.PL/Views/Department/Index.cshtml
@@ -7,7 +7,7 @@
 
 <h1 class="mb-5">All Departments</h1>
 
-<a asp-controller="Department" asp-action="Create" class="btn btn-primary mb-3">Create New Department</a>
+<a asp-action="Create" class="btn btn-primary mb-3">Create New Department</a>
 <!-- Button trigger modal -->
 @* <button type="button" class="btn btn-primary mb-3" data-toggle="modal" data-target="#staticBackdrop">
     Create New Department
