--- a/Company.PL/Views/Employee/Index.cshtml
+++ b/Company.PL/Views/Employee/Index.cshtml
@@ -7,7 +7,7 @@
 
 <h1 class="mb-5">All Employees</h1>
 
-<a asp-controller="Employee" asp-action="Create" class="btn btn-primary mb-4">Create New Employee</a>
+<a asp-action="Create" class="btn btn-primary mb-4">Create New Employee</a>
 
 <div class="row justify-content-center align-items-center">
     <form asp-action="Index" class="row col-8 offset-1">
