--- a/Company.PL/Views/_ViewImports.cshtml
+++ b/Company.PL/Views/_ViewImports.cshtml
@@ -5,4 +5,5 @@
 @using Company.BLL.Interfaces
 @using Company.PL.ViewModels.Account
 @using Company.PL.ViewModels.User
+@using Company.PL.ViewModels.Role
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
