--- a/Company.PL/Views/User/Edit.cshtml
+++ b/Company.PL/Views/User/Edit.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1 class="mb-5">Edit <span class="text-success">@Model.Username</span> Employee</h1>
+<h1 class="mb-5">Edit <span class="text-success">@Model.Username</span> User</h1>
 
 <form asp-action="Edit">
     <div asp-validation-summary="ModelOnly" class="text-danger mb-2"></div>
