Apply Role On Controllers

--- a/Company.PL/Views/Account/SignUp.cshtml
+++ b/Company.PL/Views/Account/SignUp.cshtml
@@ -30,7 +30,7 @@
 			</div>
 			<input type="submit" value="SIGNUP">
 		</form>
-		<p>Do you have an Account? <a asp-action="SignIn"> Login Now!</a></p>
+		<p>Do you have an Account? <a asp-action="Login"> Login Now!</a></p>
 	</div>
 </div>
 
