--- a/Company.PL/Views/Account/Login.cshtml
+++ b/Company.PL/Views/Account/Login.cshtml
@@ -7,7 +7,7 @@
 <div class="main-agileinfo">
 	<div class="agileits-top">
 		<div asp-validation-summary="ModelOnly" class="txt-red"></div>
-		<form asp-action="SignIn">
+		<form asp-action="Login">
 			<input class="text email" asp-for="Email" placeholder="Email" required="">
 			<span asp-validation-for="Email" class="txt-red"></span>
 			<input class="text w3lpass" asp-for="Password" placeholder="Password" required="">
@@ -24,6 +24,7 @@
 		<p>Don`t have an Account? <a asp-action="SignUp"> Register Now!</a></p>
 		<p><a asp-action="ForgetPassword"> Forget Password?</a></p>
 	</div>
+	<p class="txt-center"><a class="" id="txt-darks" asp-controller="Home" asp-action="Index"> Join Anonymous?</a></p>
 </div>
 
 @section ValidationScriptsSections {
