--- a/Company.PL/Views/Account/ForgetPassword.cshtml
+++ b/Company.PL/Views/Account/ForgetPassword.cshtml
@@ -7,7 +7,7 @@
 <div class="main-agileinfo">
 	<div class="agileits-top">
 		<div asp-validation-summary="ModelOnly" class="txt-red"></div>
-		<form asp-action="ResetPasswordEmail">
+		<form asp-action="ForgetPassword">
 			<input class="text" asp-for="Email" placeholder="Email" required="">
 			<span asp-validation-for="Email" class="txt-red"></span>
 		
