--- a/Company.PL/Views/Account/InvaledEmailOrToken.cshtml
+++ b/Company.PL/Views/Account/InvaledEmailOrToken.cshtml
@@ -6,6 +6,6 @@
 
 <div class="main-agileinfo">
 	<div class="agileits-top">
-		<p class="txt-red">Invalid Url!! Please Back To <a asp-action="SignIn"> Sign In </a> Page</p>
+		<p class="txt-red">Invalid Url!! Please Back To <a asp-action="Login"> Sign In </a> Page</p>
 	</div>
 </div>
