Update Search with Ajax

--- a/Company.PL/Views/Account/Login.cshtml
+++ b/Company.PL/Views/Account/Login.cshtml
@@ -24,7 +24,8 @@
 		<p>Don`t have an Account? <a asp-action="SignUp"> Register Now!</a></p>
 		<p><a asp-action="ForgetPassword"> Forget Password?</a></p>
 	</div>
-	<p class="txt-center"><a class="" id="txt-darks" asp-controller="Home" asp-action="Index"> Join Anonymous?</a></p>
+	@* <p class="txt-center"><a class="" id="txt-darks" asp-action="GoogleLogin"> Login with Google</a></p> *@
+	@* <p class="txt-center"><a class="" id="txt-darks" asp-controller="Home" asp-action="Index"> Join Anonymous?</a></p> *@
 </div>
 
 @section ValidationScriptsSections {
