--- a/Company.PL/Views/Employee/SearchPartialView.cshtml
+++ b/Company.PL/Views/Employee/SearchPartialView.cshtml
@@ -1,32 +1,6 @@
-﻿
-@model IEnumerable<EmployeeViewModel>
-@{
-    ViewData["Title"] = "Employees";
-    string alertColor = ViewBag.AlertColor;
-}
+﻿@model IEnumerable<EmployeeViewModel>
 
-<h1 class="mb-5">All Employees</h1>
-
-<a asp-action="Create" class="btn btn-primary mb-4">Create New Employee</a>
-
-<div class="row justify-content-center align-items-center">
-    <form asp-action="Index" class="row col-8 offset-1">
-        <div class="col-8">
-            <input type="text" class="form-control" name="searchInput" id="searchInput" placeholder="Search by Name" />
-        </div>
-        <div class="col-4">
-            <input type="submit" value="Search" class="btn btn-success"/>
-        </div>
-    </form>
-</div>
-
-@if (TempData["Message"] is not null)
-{
-    <div class="alert @alertColor mt-3">
-        @TempData["Message"]
-    </div>
-}
-@if(Model.Count() > 0)
+@if (Model.Count() > 0)
 {
     <table class="table table-striped table-hover mt-4">
         <thead>
@@ -37,7 +11,7 @@
                 <th>@Html.DisplayNameFor(D => D.Salary)</th>
                 <th>@Html.DisplayNameFor(D => D.Department)</th>
                 <th>@Html.DisplayNameFor(D => D.IsActive)</th>
-                <th>@Html.DisplayNameFor(D => D.Gender)</th> 
+                <th>@Html.DisplayNameFor(D => D.Gender)</th>
                 <th>@Html.DisplayNameFor(D => D.EmployeeType)</th>
                 <th>@Html.DisplayNameFor(D => D.Email)</th>
                 <th>@Html.DisplayNameFor(D => D.PhoneNumber)</th>
@@ -48,7 +22,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach(var employee in Model)
+            @foreach (var employee in Model)
             {
                 <tr>
                     <td>
@@ -73,7 +47,7 @@
                     <td>@Html.DisplayFor(M => employee.Email)</td>
                     <td>@Html.DisplayFor(M => employee.PhoneNumber)</td>
                     <td>@Html.DisplayFor(M => employee.HiringDate)</td>
-                    <partial name="_ButtonsPartial" model="@employee.Id.ToString()"/>
+                    <partial name="_ButtonsPartial" model="@employee.Id.ToString()" />
                 </tr>
             }
         </tbody>
@@ -82,27 +56,6 @@
 else
 {
     <div class="mt-3 alert alert-warning">
-        <h3>There is No Employee !!</h3>
+        <h3>Invalid Employee Name !!</h3>
     </div>
 }
-
-<script>
-    const searchBar = $('#searchInput');
-    const table = $('table');
-
-    searchBar.on('keyup', function (event) {
-        var searchValue = searchBar.val();
-
-        $.ajax({
-            url: 'Employee/Search',
-            type: 'Get',
-            data: { searchInput: searchValue },
-            success: function (result) {
-                table.html(result)
-            },
-            error: function (xhr, status, error) {
-                console.log(error)
-            }
-        })
-    })
-</script>
