--- a/Company.PL/Views/Shared/_Layout.cshtml
+++ b/Company.PL/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Company.PL</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Company</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -28,7 +28,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        @if (_signInManager.IsSignedIn(User))
+                        @if (_signInManager.IsSignedIn(User) || User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Department" asp-action="Index">Departments</a>
@@ -49,7 +49,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="Index">Roles</a>
                             </li>
                         }
-                        @if (_signInManager.IsSignedIn(User))
+                        @if (_signInManager.IsSignedIn(User) || User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item ml-auto">
                                 <a class="nav-link text-danger" asp-area="" asp-controller="Account" asp-action="SignOut">Sign Out</a>
@@ -67,6 +67,7 @@
         </nav>
     </header>
     <div class="container">
+        <script src="~/lib/jquery/dist/jquery.min.js"></script>
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -77,7 +78,7 @@
             &copy; @DateTime.Now.Year - Company.PL - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("ValidationScriptsSections", required: false)
