--- a/Company.PL/Views/User/SearchPartialView.cshtml
+++ b/Company.PL/Views/User/SearchPartialView.cshtml
@@ -1,28 +1,5 @@
 ﻿@model IEnumerable<UserViewModel>
-@{
-    ViewData["Title"] = "Index";
-    string alertColor = ViewBag.AlertColor;
-}
 
-<h1 class="mb-5">All Users</h1>
-
-<div class="row justify-content-center align-items-center">
-    <form asp-action="Index" class="row col-8 offset-1">
-        <div class="col-8">
-            <input type="text" class="form-control" name="searchInput" id="searchInput" placeholder="Search by Email or Username" />
-        </div>
-        <div class="col-4">
-            <input type="submit" value="Search" class="btn btn-success" />
-        </div>
-    </form>
-</div>
-
-@if (TempData["Message"] is not null)
-{
-    <div class="alert @alertColor mt-3">
-        @TempData["Message"]
-    </div>
-}
 @if (Model.Count() > 0)
 {
     <table class="table table-striped table-hover mt-4">
@@ -53,8 +30,8 @@
                     <td>@Html.DisplayFor(U => user.PhoneNumber)</td>
                     <td>@string.Join(",", user.Roles)</td>
                     <partial name="_ButtonsPartial" model="@user.Id" />
-                </tr>                    
-                
+                </tr>
+
             }
         </tbody>
     </table>
@@ -62,27 +39,6 @@
 else
 {
     <div class="mt-3 alert alert-warning">
-        <h3>There is No User !!</h3>
+        <h3>Invalid User Name !!</h3>
     </div>
 }
-
-<script>
-    const searchBar = $('#searchInput');
-    const table = $('table');
-
-    searchBar.on('keyup', function (event) {
-        var searchValue = searchBar.val();
-
-        $.ajax({
-            url: 'User/Search',
-            type: 'Get',
-            data: { searchInput: searchValue },
-            success: function (result) {
-                table.html(result)
-            },
-            error: function (xhr, status, error) {
-                console.log(error)
-            }
-        })
-    })
-</script>
