--- a/Company.PL/Views/_ViewImports.cshtml
+++ b/Company.PL/Views/_ViewImports.cshtml
@@ -6,4 +6,5 @@
 @using Company.PL.ViewModels.Account
 @using Company.PL.ViewModels.User
 @using Company.PL.ViewModels.Role
+@using Company.PL.Authorizations
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
